docs: add docs for news related operations
